# sally

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.old  Jenkinsfile  LICENSE  Makefile  README.md  package-lock.json  package.json  sally  sally.cabal  sally.sqlite3  sillysally.cabal  stack.yaml
.deploy-work/: deploy.sh  initdb.sql  initialize.sh
app/: .Main.hs.swp  Main.hs
db/: sally
scripts/: Dockerfile  deploy.sh  docker_run.sh  initdb.sql  initialize.sh  sally-build.Dockerfile  sally-run.Dockerfile  set_js_domain.sh  set_websockets_host.sh
src/: .Lib.hs.swp  Lib.hs
src-js/: app-template.js  app.js  lists.js  sallygame.js  sallysocket.js
src/Sally/: .Core.hs.swp  .Pages.hs.swp  .Web.hs.swp  .WebSockets.hs.swp  Application.hs  Config.hs  Core.hs  Game.hs  Pages.hs  SocketApp.hs  SpockApp.hs  SpockUtil.hs  Web.hs  WebSockets.hs
src/Sally/Application/: Spock.hs  WebSockets.hs
static/: .app.js.swp  .style.css.swp  app.js  app.js.template  style.css
