name:                sally
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dunnl/sally#readme
license:             BSD3
license-file:        LICENSE
author:              Lawrence Dunn
maintainer:          lawrence.dunn@hushmail.com
copyright:           Copyright: (c) 2016 Lawrence Dunn
category:            General
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sally.Config
                     , Sally.Game
                     , Sally.Pages
                     , Sally.SpockUtil
                     , Sally.Application
                     , Sally.Application.Spock
                     , Sally.Application.WebSockets
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson >= 1.1
                     , websockets
                     , uuid
                     , random
                     , optparse-applicative
                     , unordered-containers
                     , resource-pool
                     , vault
                     , bytestring
                     , http-types
                     , wai
                     , wai-websockets
                     , warp
                     , sqlite-simple
                     , time
                     , Spock
                     , Spock-core
                     , wai-middleware-static
                     , Spock-digestive
                     , blaze-html
                     , digestive-functors
                     , digestive-functors-blaze
  default-language:    Haskell2010

executable sally
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sally
                     , optparse-applicative
  default-language:    Haskell2010

test-suite sally-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sally
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dunnl/sally
